--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "test": "vitest run unit",
+    "test:integration": "vitest run integration",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
