--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      # - name: Start services with Docker Compose
-      #   # This command starts all services defined in your docker-compose.yml
-      #   # in the background (-d). The '--wait' flag tells Compose to wait
-      #   # until the containers report a "healthy" status.
-      #   run: docker compose up -d --wait
+      - name: Start services with Docker Compose
+        # This command starts all services defined in your docker-compose.yml
+        # in the background (-d). The '--wait' flag tells Compose to wait
+        # until the containers report a "healthy" status.
+        run: ./docker-compose-test.sh
 
       - name: Check formatting
         run: pnpm format:check
@@ -43,13 +43,17 @@ jobs:
         run: pnpm check-types
 
       - name: Run unit tests
-        # Your tests can now connect to the services started via Docker Compose
         env:
           ENVIRONMENT: test
         run: pnpm test
 
-      # - name: Stop services
-      #   # This step runs even if previous steps fail, ensuring
-      #   # that the Docker Compose services are always stopped.
-      #   if: always()
-      #   run: docker compose down
+      - name: Run integration tests
+        env:
+          ENVIRONMENT: test
+        run: pnpm test:integration
+
+      - name: Stop services
+        # This step runs even if previous steps fail, ensuring
+        # that the Docker Compose services are always stopped.
+        if: always()
+        run: docker compose down
