--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -8,10 +8,9 @@
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
-    "test:integration": "pnpm dotenvx vitest run integration --config __tests__/vitest.config.ts",
+    "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
     "lint": "eslint .",
-    "check-types": "tsc --noEmit",
-    "dotenvx": "../../scripts/dotenvx.sh"
+    "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -20,16 +19,17 @@
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^4.1.12"
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
     "@azure/keyvault-keys": "^4.10.0",
     "@azure/keyvault-secrets": "^4.10.0",
-    "@repo/keys": "workspace:*",
     "@repo/enums": "workspace:*",
-    "@repo/utils": "workspace:*",
+    "@repo/keys": "workspace:*",
     "@repo/mappers": "workspace:*",
+    "@repo/utils": "workspace:*",
     "typanion": "^3.14.0"
   }
 }
