--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -18,6 +18,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
     "npm-run-all": "^4.1.5",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@azure/keyvault-keys": "^4.10.0"
   }
 }
