--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -52,6 +52,34 @@ jobs:
           ENVIRONMENT: test
         run: pnpm test:integration
 
+      - name: Log in to GitHub Container Registry
+        # This step is only run on pushes to the main branch
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push console image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./apps/console/Dockerfile
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ghcr.io/${{ github.repository }}/console:latest
+
+      - name: Build and push hono image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: ./apps/hono/Dockerfile
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ghcr.io/${{ github.repository }}/hono:latest
+
       - name: Stop services
         # This step runs even if previous steps fail, ensuring
         # that the Docker Compose services are always stopped.
