--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -16,6 +16,7 @@
     "@repo/validation": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "hono": "^4.9.10",
+    "hono-openapi": "^1.1.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
