--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.19.5",
+    "@hono/standard-validator": "^0.1.5",
     "@hono/zod-validator": "^0.7.4",
     "@repo/enums": "workspace:*",
     "@repo/openapi": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/validation": "workspace:*",
+    "@scalar/hono-api-reference": "^0.9.22",
     "@t3-oss/env-core": "^0.13.8",
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
