--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -27,6 +27,7 @@
     "@azure/keyvault-keys": "^4.10.0",
     "@repo/enums": "workspace:*",
     "@repo/keys": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "@repo/mappers": "workspace:*",
     "@repo/utils": "workspace:*",
     "typanion": "^3.14.0"
