--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -19,15 +19,18 @@
     "@simplewebauthn/types": "^12.0.0",
     "@types/node": "^22.5.2",
     "tsx": "^4.20.6",
+    "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
-    "@repo/validation": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/keys": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@repo/validation": "workspace:*",
     "cbor": "^10.0.11",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.2",
