--- a/packages/credentials/package.json
+++ b/packages/credentials/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/virtual-authenticator",
+  "name": "@repo/credentials",
   "version": "0.0.0",
   "private": true,
   "type": "module",
