--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -8,10 +8,15 @@
     "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
+    "@azure/identity": "^4.13.0",
+    "@azure/keyvault-keys": "^4.10.0",
     "@hono/node-server": "^1.19.5",
     "@hono/standard-validator": "^0.1.5",
     "@hono/zod-validator": "^0.7.4",
     "@repo/enums": "workspace:*",
+    "@repo/credentials": "workspace:*",
+    "@repo/key-vault": "workspace:*",
+    "@repo/keys": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/validation": "workspace:*",
     "@scalar/hono-api-reference": "^0.9.22",
