revert virtual-authenticator

--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -28,7 +28,7 @@
     "@azure/keyvault-keys": "^4.10.0",
     "@repo/enums": "workspace:*",
     "@repo/keys": "workspace:*",
-    "@repo/credentials": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@repo/mappers": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/utils": "workspace:*",
