--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -14,7 +14,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@hono/zod-validator": "^0.7.4",
     "@repo/enums": "workspace:*",
-    "@repo/credentials": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/prisma": "workspace:*",
