--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "eslint": "^9.34.0"
   },
   "packageManager": "pnpm@10.19.0",
   "engines": {
