feat: credentials api (#44)

--- a/packages/virtual-authenticator/tsconfig.json
+++ b/packages/virtual-authenticator/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "@repo/typescript-config/base.json",
-  "include": ["src"],
+  "include": [
+    "src",
+    "../key-vault/src/types",
+    "../key-vault/src/CredentialSignerFactory.ts",
+    "../types/src/CredentialSigner.ts"
+  ],
   "exclude": ["node_modules"]
 }
