--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "eslint": "^9.34.0"
   },
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@10.19.0",
   "engines": {
     "node": ">=18"
   }
