--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -20,13 +20,15 @@
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@repo/prisma": "workspace:*"
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
     "@azure/keyvault-keys": "^4.10.0",
     "@repo/enums": "workspace:*",
     "@repo/keys": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@repo/mappers": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/utils": "workspace:*",
