--- a/apps/hono/.env.development
+++ b/apps/hono/.env.development
@@ -2,3 +2,4 @@ PORT=3001
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 NODE_TLS_REJECT_UNAUTHORIZED=0
+AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
