--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm dotenvx rollup -c --watch",
-    "build": "rollup -c",
+    "build": "SKIP_ENV_VALIDATION=true rollup -c",
     "start": "pnpm dotenvx node dist/index.js",
     "dotenvx": "../../scripts/dotenvx.sh",
     "test:integration": "vitest run integration --config __tests__/vitest.config.ts"
