--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-node-resolve": "^16.0.2",
     "@rollup/plugin-run": "^3.1.0",
     "@rollup/plugin-swc": "^0.4.0",
+    "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
     "@types/node": "^20.11.17",
     "rollup": "^4.52.4",
