--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -32,8 +32,6 @@ jobs:
 
       - name: Run database migrations
         env:
-          # This URL should point to the database service in your Docker Compose file.
-          # The example below is a common default for PostgreSQL.
           DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
         # Use the --filter flag to run the command in the correct package.
         run: pnpm --filter @repo/prisma db:migrate
@@ -58,6 +56,7 @@ jobs:
       - name: Run integration tests
         env:
           ENVIRONMENT: test
+          DATABASE_URL: 'postgresql://postgres:postgres@localhost:5432/postgres?schema=public'
         run: pnpm test:integration
 
       - name: Log in to GitHub Container Registry
