--- a/packages/mappers/package.json
+++ b/packages/mappers/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@repo/enums": "workspace:*",
     "@repo/utils": "workspace:*",
+    "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0"
   }
 }
