--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -18,6 +18,7 @@
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@repo/better-auth": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
