--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -37,7 +37,8 @@
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
     "ts-pattern": "^5.8.0",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@repo/prisma": "workspace:*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -49,6 +50,7 @@
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@repo/typescript-config": "workspace:*"
   }
 }
