--- a/apps/hono/.env.development
+++ b/apps/hono/.env.development
@@ -1,6 +1,12 @@
 PORT=3001
+BASE_URL="http://localhost:${PORT}"
+
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
+
 JWT_SECRET="secret"
+
+
