--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -14,18 +14,20 @@
     "@hono/node-server": "^1.19.5",
     "@hono/standard-validator": "^0.1.5",
     "@hono/zod-validator": "^0.7.4",
+    "@repo/better-auth": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "@repo/better-auth": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "@scalar/hono-api-reference": "^0.9.22",
     "@t3-oss/env-core": "^0.13.8",
+    "better-auth": "^1.3.27",
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
+    "lodash-es": "^4.17.21",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@rollup/plugin-swc": "^0.4.0",
     "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.11.17",
     "rollup": "^4.52.4",
     "rollup-plugin-copy": "^3.5.0",
