--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -3,12 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "exports": {
-    ".": "./src/index.ts"
-  },
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "scripts": {
     "build": "prisma generate",
-    "post-install": "prisma generate",
     "format": "prisma format",
     "db:generate": "pnpm dotenvx prisma migrate dev",
     "db:migrate": "pnpm dotenvx prisma migrate deploy",
@@ -27,7 +25,9 @@
   },
   "dependencies": {
     "@nestjs/jwt": "^11.0.0",
+    "@prisma/adapter-pg": "^6.18.0",
     "@prisma/client": "^6.16.3",
+    "@prisma/extension-accelerate": "^2.0.2",
     "bcrypt": "^6.0.0"
   }
 }
