--- a/apps/console/.env.development
+++ b/apps/console/.env.development
@@ -1,6 +1,8 @@
 PORT=3000
 BASE_URL="http://localhost:${PORT}"
 
+API_BASE_URL="http://localhost:3001"
+
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 
 # https://github.com/settings/applications/3218560
