--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "generate:client": "openapi-typescript ../hono/static/openapi.json -o ./src/lib/api/v1.d.ts",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
@@ -36,6 +37,8 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "openapi-fetch": "^0.15.0",
+    "openapi-react-query": "^0.5.1",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
@@ -57,6 +60,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "openapi-typescript": "^7.10.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
