--- a/apps/hono/.env.development
+++ b/apps/hono/.env.development
@@ -9,4 +9,4 @@ AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
 
 JWT_SECRET="secret"
 
-
+API_KEY_PREFIX="virtual-webauthn-authenticator_"
