--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -24,6 +24,7 @@
     "@repo/virtual-authenticator": "workspace:*",
     "@scalar/hono-api-reference": "^0.9.22",
     "@t3-oss/env-core": "^0.13.8",
+    "@ts-rest/core": "^3.52.1",
     "better-auth": "^1.3.27",
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
