--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -15,6 +15,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@hono/zod-validator": "^0.7.4",
     "@repo/better-auth": "workspace:*",
+    "@repo/contract": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
@@ -29,7 +30,8 @@
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
     "lodash-es": "^4.17.21",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zod-openapi": "^5.4.3"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
@@ -51,6 +53,7 @@
     "rollup-plugin-node-externals": "^8.1.1",
     "rollup-plugin-shell": "^1.0.9",
     "rollup-plugin-tsconfig-paths": "^1.5.2",
+    "type-fest": "^5.0.1",
     "typescript": "^5.8.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
