api key manager

--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -31,7 +31,8 @@
     "hono-openapi": "^1.1.0",
     "lodash-es": "^4.17.21",
     "zod": "^4.1.12",
-    "zod-openapi": "^5.4.3"
+    "zod-openapi": "^5.4.3",
+    "@repo/api-key": "workspace:*"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
