--- a/apps/console/.env.development
+++ b/apps/console/.env.development
@@ -1,7 +1,7 @@
 PORT=3000
 BASE_URL="http://localhost:${PORT}"
 
-API_BASE_URL="http://localhost:3001"
+NEXT_PUBLIC_API_BASE_URL="http://localhost:3001"
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 
