--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "generate:client": "openapi-typescript ../hono/static/openapi.json -o ./src/lib/api/v1.d.ts",
+    "generate:client": "openapi-typescript ../hono/static/openapi.yml -o ./src/lib/api/v1.d.ts",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint"
