--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -7,7 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "../../scripts/generate_barrels.ts src/http",
+    "build": "pnpm barrel",
+    "barrel": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
