--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,6 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
+    "build": "pnpm barrel",
+    "barrel": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
