--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/better-auth": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@repo/proxy": "workspace:*",
     "@repo/validation": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
     "better-auth": "^1.3.27",
