--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
