--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -31,6 +31,7 @@
     "better-auth": "^1.3.27",
     "hono": "^4.9.10",
     "hono-openapi": "^1.1.0",
+    "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
     "zod": "^4.1.12",
     "zod-openapi": "^5.4.3"
