--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@repo/api-key": "workspace:*",
     "@repo/better-auth": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
@@ -35,6 +36,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "hono": "^4.9.10",
     "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
