--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/proxy",
+  "name": "@repo/jwt",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -21,13 +21,11 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@repo/enums": "workspace:*",
-    "@repo/exception": "workspace:*",
-    "@repo/jwt": "workspace:*",
     "@repo/crypto": "workspace:*",
+    "@repo/enums": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "@repo/api-key": "workspace:*",
-    "hono": "^4.9.10",
-    "typanion": "^3.14.0"
+    "jose": "^6.1.0",
+    "typanion": "^3.14.0",
+    "zod": "^4.1.12"
   }
 }
