--- a/apps/hono/.env.development
+++ b/apps/hono/.env.development
@@ -7,6 +7,9 @@ AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
 
-JWT_SECRET="secret"
+JWK_PRIVATE_KEY_ENCRYPTION_SECRET="secret"
+JWT_CURRENT_JWK_KID="5858dff7-ad5f-432e-a41d-851ceda96ac6"
+JWT_ISSUER="http://localhost:3000"
+JWT_AUDIENCE=${BASE_URL}
 
 API_KEY_PREFIX="virtual-webauthn-authenticator_"
