--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,17 @@
       "outputs": ["dist/**", "generated/**"]
     },
     "@repo/hono#generate:spec": {
-      "outputs": ["apps/hono/static/openapi.json"]
+      "outputs": ["static/openapi.json"]
+    },
+    "@repo/plasmo#build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": ["build/**"]
+    },
+    "@repo/prisma#build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": ["src/generated/prisma/**"]
     },
     "@repo/console#build": {
       "dependsOn": ["^build"],
