--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -7,8 +7,7 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "pnpm barrel",
-    "barrel": "../../scripts/barrel.ts",
+    "build": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
