--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,7 @@
       "outputs": ["dist/**", "generated/**"]
     },
     "@repo/hono#generate:spec": {
+      "dependsOn": ["^build"],
       "outputs": ["static/openapi.json"]
     },
     "@repo/plasmo#build": {
