--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
       "outputs": ["dist/**", "generated/**", "build/**"]
     },
     "@repo/console#build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "@repo/hono#build"],
       "inputs": [
         "$TURBO_DEFAULT$",
         ".env*",
