--- a/apps/hono/.env.test
+++ b/apps/hono/.env.test
@@ -1,7 +1,7 @@
 PORT=3001
 BASE_URL="http://localhost:${PORT}"
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/prisma?schema=public}
 
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 NODE_TLS_REJECT_UNAUTHORIZED=0
