--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "generate:client": "openapi-typescript ../hono/static/openapi.yml -o ./src/lib/api/v1.d.ts",
-    "build": "next build --turbopack",
+    "build": "pnpm generate:client && next build --turbopack",
     "start": "next start",
     "lint": "eslint"
   },
@@ -25,16 +25,20 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@repo/api-key": "workspace:*",
     "@repo/better-auth": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
     "@repo/validation": "workspace:*",
+    "@repo/jwt": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "hono": "^4.9.10",
+    "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
