--- a/apps/hono/.env.test
+++ b/apps/hono/.env.test
@@ -1,13 +1,16 @@
 PORT=3001
 BASE_URL="http://localhost:${PORT}"
 
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+DATABASE_URL=${DATABASE_URL:-postgresql://postgres:postgres@localhost:5432/prisma?schema=public}
 
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
 
-JWT_SECRET="secret"
+JWK_PRIVATE_KEY_ENCRYPTION_SECRET="secret"
+JWT_CURRENT_JWK_KID="5858dff7-ad5f-432e-a41d-851ceda96ac6"
+JWT_ISSUER=${BASE_URL}
+JWT_AUDIENCE=${BASE_URL}
 
 API_KEY_PREFIX="virtual-webauthn-authenticator_"
 
