--- a/turbo.json
+++ b/turbo.json
@@ -7,12 +7,31 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**", "generated/**"]
+      "outputs": ["dist/**", "generated/**", "build/**"]
     },
     "@repo/console#build": {
+      "dependsOn": ["^build", "@repo/hono#build"],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env*",
+        "../../apps/hono/static/openapi.json"
+      ],
+      "outputs": [".next/**"]
+    },
+    "@repo/hono#build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**"]
+      "outputs": ["static/openapi.json"]
+    },
+    "@repo/plasmo#build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": ["build/**"]
+    },
+    "@repo/prisma#build": {
+      "dependsOn": ["^build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"],
+      "outputs": ["src/generated/client/**"]
     },
     "@repo/types#build": {
       "dependsOn": ["^build"],
