--- a/turbo.json
+++ b/turbo.json
@@ -70,7 +70,7 @@
       "cache": false,
       "persistent": true
     },
-    "start:dev": {
+    "dev": {
       "cache": false,
       "persistent": true
     }
