--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -1,19 +1,21 @@
+# App
 PORT=3002
 BASE_URL="http://localhost:${PORT}"
 
+HONO_BASE_URL="http://localhost:3001"
+NEXTJS_BASE_URL="http://localhost:3000"
+
+# Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 
-AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
-NODE_TLS_REJECT_UNAUTHORIZED=0
-AZURE_POD_IDENTITY_AUTHORITY_HOST="http://localhost:3080"
-
-JWK_PRIVATE_KEY_ENCRYPTION_SECRET="secret"
-JWT_CURRENT_JWK_KID="5858dff7-ad5f-432e-a41d-851ceda96ac6"
-JWT_ISSUER="http://localhost:3000"
+# JWT
+JWT_ISSUER=${BASE_URL}
 JWT_AUDIENCE=${BASE_URL}
 
-API_KEY_PREFIX="virtual-webauthn-authenticator_"
+# Better auth
+TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL}"
 
+# OAuth
 # https://github.com/settings/applications/3218560
 GITHUB_CLIENT_ID="Ov23liefjRRGHonCjBqs"
 GITHUB_CLIENT_SECRET="86678e1a387576cb026f4485564c06324c6ff553"
