--- a/apps/auth/.env.development
+++ b/apps/auth/.env.development
@@ -10,7 +10,7 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public
 
 # JWT
 JWT_ISSUER=${BASE_URL}
-JWT_AUDIENCE=${BASE_URL}
+JWT_AUDIENCE=${HONO_BASE_URL}
 
 # Better auth
 TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL}"
