--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -21,15 +21,12 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@repo/api-key": "workspace:*",
     "@repo/crypto": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
-    "@repo/jwt": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
     "hono": "^4.9.10",
-    "typanion": "^3.14.0",
-    "winston": "^3.18.3"
+    "typanion": "^3.14.0"
   }
 }
