--- a/apps/hono/package.json
+++ b/apps/hono/package.json
@@ -17,6 +17,7 @@
     "@hono/zod-validator": "^0.7.4",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
+    "@repo/auth": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
