--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -5,22 +5,32 @@
   "private": true,
   "scripts": {
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "pnpm dotenvx node dist/main",
+    "dev": "pnpm dotenvx nest start --watch",
+    "start": "pnpm dotenvx node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
     "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
+    "@azure/identity": "^4.13.0",
+    "@azure/keyvault-keys": "^4.10.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@repo/auth": "workspace:*",
+    "@repo/enums": "workspace:*",
+    "@repo/exception": "workspace:*",
+    "@repo/logger": "workspace:*",
+    "@repo/key-vault": "workspace:*",
+    "@repo/keys": "workspace:*",
+    "@repo/utils": "workspace:*",
+    "@repo/validation": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@t3-oss/env-core": "^0.13.8",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -34,10 +44,7 @@
     "@types/supertest": "^6.0.2",
     "@types/webpack-node-externals": "^3.0.4",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
-    "prettier": "^3.4.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-loader": "^9.5.2",
