--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -5,5 +5,11 @@
   "license": "MIT",
   "publishConfig": {
     "access": "public"
+  },
+  "exports": {
+    "./nestjs.json": "./nestjs.json",
+    "./nextjs.json": "./nextjs.json",
+    "./base.json": "./base.json",
+    "./plasmo.json": "./plasmo.json"
   }
 }
