--- a/apps/nestjs/tsconfig.json
+++ b/apps/nestjs/tsconfig.json
@@ -28,6 +28,6 @@
     "noImplicitAny": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/**/*.d.ts", "__tests__"],
   "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
 }
