--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
+    "@repo/contract": "workspace:*",
     "@repo/validation": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
+    "@ts-rest/react-query": "^3.52.1",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
