--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -18,16 +18,19 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@repo/auth": "workspace:*",
+    "@repo/contract": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
-    "@repo/logger": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
+    "@repo/logger": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
-    "@repo/prisma": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
+    "@ts-rest/core": "^3.52.1",
+    "@ts-rest/nest": "^3.52.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.12"
