--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -26,10 +26,12 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/contract": "workspace:*",
+    "@repo/enums": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
     "@repo/validation": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
+    "@ts-rest/core": "^3.53.0-rc.1",
     "@ts-rest/react-query": "^3.52.1",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
