--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -29,7 +29,7 @@
     "@repo/validation": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
-    "@ts-rest/core": "^3.52.1",
+    "@ts-rest/core": "^3.53.0-rc.1",
     "@ts-rest/nest": "^3.52.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
