--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -30,7 +30,7 @@
     "@repo/virtual-authenticator": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "@ts-rest/core": "^3.53.0-rc.1",
-    "@ts-rest/nest": "^3.52.1",
+    "@ts-rest/nest": "^3.53.0-rc.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.12"
@@ -55,6 +55,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "webpack": "^5.102.1",
     "webpack-node-externals": "^3.0.0"
