feat: ts-rest (#52)

--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/auth",
+  "name": "@repo/contract",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,26 +9,23 @@
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "generate:spec": "scripts/generate-spec.ts"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
-    "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "yaml": "^2.8.1"
   },
   "dependencies": {
-    "@repo/crypto": "workspace:*",
     "@repo/enums": "workspace:*",
-    "@repo/exception": "workspace:*",
+    "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
-    "@repo/logger": "workspace:*",
-    "@repo/prisma": "workspace:*",
-    "hono": "^4.9.10",
-    "jose": "^6.1.0",
-    "typanion": "^3.14.0"
+    "@ts-rest/core": "3.53.0-rc.1",
+    "@ts-rest/open-api": "3.53.0-rc.1",
+    "zod": "^4.1.12"
   }
 }
