--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -18,16 +18,19 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@repo/auth": "workspace:*",
+    "@repo/contract": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
-    "@repo/logger": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
+    "@repo/logger": "workspace:*",
+    "@repo/prisma": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
-    "@repo/prisma": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
+    "@ts-rest/core": "^3.53.0-rc.1",
+    "@ts-rest/nest": "^3.53.0-rc.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.12"
@@ -52,6 +55,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "webpack": "^5.102.1",
     "webpack-node-externals": "^3.0.0"
