feat: better auth api keys

--- a/apps/auth-server/.env.development
+++ b/apps/auth-server/.env.development
@@ -10,7 +10,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public
 
 # JWT
 JWT_ISSUER=${BASE_URL}
-JWT_AUDIENCE=${HONO_BASE_URL}
+JWT_AUDIENCE=${BASE_URL}
+ENCRYPTION_KEY="secret"
 
 # Better auth
 TRUSTED_ORIGINS="${HONO_BASE_URL};${NEXTJS_BASE_URL}"
