--- a/apps/auth-server/.env.development
+++ b/apps/auth-server/.env.development
@@ -11,6 +11,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public
 # JWT
 JWT_ISSUER=${BASE_URL}
 JWT_AUDIENCE=${BASE_URL}
+
+# Crypto
 ENCRYPTION_KEY="secret"
 
 # Better auth
