--- a/apps/nestjs/.env.development
+++ b/apps/nestjs/.env.development
@@ -7,6 +7,9 @@ AUTH_SERVER_BASE_URL="http://localhost:3002"
 # Database
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 
+# Crypto
+ENCRYPTION_KEY="secret"
+
 # Key vault
 NODE_TLS_REJECT_UNAUTHORIZED=0
 AZURE_KEY_VAULT_BASE_URL="https://localhost:3443"
