--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -42,6 +42,9 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@simplewebauthn/server": "^13.2.2",
+    "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
@@ -55,6 +58,7 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0",
+    "unplugin-swc": "^1.5.8",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "webpack": "^5.102.1",
