--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -19,11 +20,13 @@
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "dependencies": {
     "@repo/enums": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@repo/exception": "workspace:*",
     "cbor": "^10.0.11",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0"
