--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
+    "@repo/validation": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
