--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -8,16 +8,18 @@
   },
   "scripts": {
     "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
+    "test:integration:coverage": "vitest run integration --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/test-helpers": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@simplewebauthn/server": "^13.2.1",
     "@simplewebauthn/types": "^12.0.0",
     "@types/node": "^22.5.2",
+    "@vitest/coverage-v8": "3.2.4",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4",
@@ -25,9 +27,9 @@
   },
   "dependencies": {
     "@repo/enums": "workspace:*",
+    "@repo/exception": "workspace:*",
     "@repo/keys": "workspace:*",
     "@repo/prisma": "workspace:*",
-    "@repo/exception": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "@repo/validation": "workspace:*",
