--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "exports": {
     "./base": "./base.js",
-    "./nest": "./nest.js"
+    "./nestjs": "./nestjs.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
