--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -20,6 +20,7 @@
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
     "@repo/enums": "workspace:*",
+    "@repo/mappers": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/key-vault": "workspace:*",
     "@repo/keys": "workspace:*",
