--- a/packages/mappers/package.json
+++ b/packages/mappers/package.json
@@ -21,7 +21,9 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@repo/prisma": "workspace:*",
     "@repo/enums": "workspace:*",
+    "@repo/exception": "workspace:*",
     "@repo/utils": "workspace:*",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0"
