--- a/apps/nestjs/.env.production
+++ b/apps/nestjs/.env.production
@@ -5,7 +5,10 @@ BASE_URL="http://localhost:${PORT}"
 AUTH_SERVER_BASE_URL="http://localhost:3002"
 
 # Database
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@postgres:5432/prisma?schema=public"
+
+# Crypto
+ENCRYPTION_KEY="secret"
 
 # Key vault
 NODE_TLS_REJECT_UNAUTHORIZED=0
