--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "0.7.1",
+    "@repo/logger": "workspace:*",
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
