--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -17,6 +17,7 @@
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validation": "workspace:*",
+    "@standard-schema/spec": "^1.0.0",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
